zero-schema-derive/tests/ui/fail/09_external_links.stderr
error: tag_field is only applicable to Schema payload fields
 --> tests/ui/fail/09_external_links.rs:2:71
  |
2 | #[derive(ZeroSchema)] struct Bad { #[zero(tag_field=payload)] payload:u32, #[zero(tag_field=tag)] tag:u8 }
  |                                                                       ^^^

error: tag_field is only applicable to Schema payload fields
 --> tests/ui/fail/09_external_links.rs:2:103
  |
2 | #[derive(ZeroSchema)] struct Bad { #[zero(tag_field=payload)] payload:u32, #[zero(tag_field=tag)] tag:u8 }
  |                                                                                                       ^^
